--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm test
 
     - name: Run integration tests
-      run: npm run integration-test
+      run: npm run integration-tests
 
     - name: Check code formatting
       run: npm run format:check
